[package]
name = "rust-os-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
volatile = { version = "0.6", features = ["unstable"] }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.9"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

